Coord default entry point